welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: Boolean does not take parameters
} else (negative == true && (a<0 && b<0 ) ){
                                           ^